--- a/contactos.html
+++ b/contactos.html
@@ -5,53 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./ccs/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <title>Farmacia Mc Clymont</title>
   </head>
   <body>
     <!-- !Inicio header + Navegador -->
-    <header class="navegacion_principal_header">
+    <header class="navegacion_principal_header container-fluid">
       <img
-        class="navegacion_principal_header_logo"
+        class="navegacion_principal_header_logo row"
         src="./img/LOGOMCCLYMONT.png"
         alt="LOGO MC CLYMONT"
       />
-      <nav class="navegacion_principal_nav">
-        <ul>
-          <li>
-            <a class="navegacion_a" href="../index.html">Inicio</a>
-          </li>
-          <li>
-            <a class="navegacion_a" href="./nosotros.html">Nosotros</a>
-          </li>
-          <li>
-            <a class="navegacion_a" href="./contactos.html">Contacto</a>
-          </li>
-          <li>
-            <a class="navegacion_a" href="./cuidadopersonal.html">CuidadoPersonal</a>
-            <ul>
-              <li>
-                <a class="navegacion_sub" href="">Cabello</a>
+      <nav class="navbar navbar-expand-lg " >
+        <div class="container-fluid ">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active titulo_nav" aria-current="page" href="../index.html">INICIO</a>
               </li>
-              <li>
-                <a class="navegacion_sub" href="">Higiene Bucal </a>
+              <li class="nav-item">
+                <a class="nav-link titulo_nav" href="./nosotros.html">NOSOTROS</a>
               </li>
-              <li>
-                <a class="navegacion_sub" href="">Higiene Personal</a>
+              <li class="nav-item">
+                <a class="nav-link titulo_nav" href="./contactos.html">CONTACTO</a>
               </li>
-            </ul>
-          </li>
-          <li>
-            <a class="navegacion_a" href="./medicamentos.html">Medicamentos</a>
-            <ul>
-              <li>
-                <a class="navegacion_sub" href="">Con Obra Social</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle titulo_nav" href="./cuidadopersonal.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  CUIDADO PERSONAL
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">CABELLO</a></li>
+                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">HIGIENE BUCAL</a></li>
+                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">HIGIENE PERSONAL</a></li>
+                </ul>
               </li>
-              <li>
-                <a class="navegacion_sub" href="">Particular</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle titulo_nav " href="./medicamentos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  MEDICAMENTOS
+                </a>
+                <ul class="dropdown-menu menu_desplegable">
+                  <li><a class="dropdown-item sub_titulo_nav" href="./medicamentos.html">OBRA SOCIAL</a></li>
+                  <li><a class="dropdown-item sub_titulo_nav" href="./medicamentos.html">PARTICULAR</a></li>
+                </ul>
               </li>
-            </ul>
-          </li>
-        </ul>
+          </div>
+        </div>
       </nav>
       <div class="whatsapp">
         <img
@@ -104,6 +102,9 @@
           <input class="enviar_formulario" type="submit" value="Enviar Formulario" />
         </form>
       </article>
+      <div>
+        <p class="consultanos_contactos">Consultános y en breve nos ponémos en contacto con vos</p>
+      </div>
     </section>
         <!-- Inicio Footer -->
         <footer class="footer_principal_contactos">
@@ -123,5 +124,6 @@
           <p class="footer_principal_texto_instagram">Seguinos</p>
         </footer>
         <!-- Fin Footer -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
 </html>
