--- a/cuidadopersonal.html
+++ b/cuidadopersonal.html
@@ -5,50 +5,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./ccs/style.css" />
+    <meta name="descripcion" content="farmacia de Rosario, productos de belleza al precio más bajo">
+    <meta name="keywords" content="paginas web, mobile frist, html5, css3, sass, responsive,ecommerce, apps a medida">
+    <link rel="stylesheet" href="./css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">    
     <!-- CSS only -->
-    <title>Farmacia Mc Clymont</title>
+    <title>Farmacia Mc Clymont, todo para vos</title>
   </head>
   <body>
-    <header class="navegacion_principal_header container-fluid">
-      <img
-        class="navegacion_principal_header_logo row"
-        src="./img/LOGOMCCLYMONT.png"
-        alt="LOGO MC CLYMONT"
-      />
-      <!-- Inicio Navegador -->
-      <nav class="navbar navbar-expand-lg " >
+    <header class="navegacion_principal_header container-fluid">  
+      <nav class="navbar navbar-expand-lg" >
         <div class="container-fluid ">
+          <img
+        class="navegacion_principal_header_logo  "
+        src="./img/LOGOMCCLYMONT.png"
+        alt="LOGO MC CLYMONT"   
+      />        
+      </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active titulo_nav" aria-current="page" href="../index.html">INICIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link titulo_nav" href="./nosotros.html">NOSOTROS</a>
+                <a class="nav-link active titulo_nav" href="./nosotros.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link titulo_nav" href="./contactos.html">CONTACTO</a>
+                <a class="nav-link active titulo_nav" href="./contactos.html">CONTACTO</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle titulo_nav" href="./cuidadopersonal.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <li class="nav-item">
+                <a class="nav-link active titulo_nav" href="./cuidadopersonal.html">
                   CUIDADO PERSONAL
                 </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">CABELLO</a></li>
-                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">HIGIENE BUCAL</a></li>
-                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">HIGIENE PERSONAL</a></li>
-                </ul>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle titulo_nav " href="./medicamentos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  MEDICAMENTOS
-                </a>
-                <ul class="dropdown-menu menu_desplegable">
-                  <li><a class="dropdown-item sub_titulo_nav" href="./medicamentos.html">OBRA SOCIAL</a></li>
-                  <li><a class="dropdown-item sub_titulo_nav" href="./medicamentos.html">PARTICULAR</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link active titulo_nav " href="./medicamentos.html">MEDICAMENTOS</a>
               </li>
           </div>
         </div>
@@ -62,33 +56,63 @@
           height="100"
         />
       </div>
-      <!-- Fin Navegador -->
     </header>
-    <main class="cuidadopersonal_principal">
-      <section class="seccion_cabello">
-        <p class="cuidadopersonal_subtitulo">Cabello</p>
-        <img
-          class="cabello_imagen"
-          src="./img/Cuidado Cabello.jpg"
-          alt="Cuidado Cabello"
-        />
+    <main class="cuidadopersonal_principal container-fluid">
+      <div class="row">
+      <section class="seccion_cabello col-md-4">
+        <div class="card card_cabello" style="width: 18rem;">
+          <img src="./img/cabello.jpg" class="card-img-top" alt="Cabello">
+          <div class="card-body">
+            <h5 class="card-title">Cabello</h5>
+            <p class="card-text">Creá una rutina para tu cabello, con los mejores productos. Dejá que tu pelo hable por tí</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
       </section>
-      <section class="seccion_higiene_bucal">
-        <p class="cuidadopersonal_subtitulo">Higiene Bucal</p>
-        <img
-          class="higiene_bucal_imagen"
-          src="./img/Higienebucal.jpg"
-          alt="Higiene Bucal"
-        />
+      <section class="seccion_higiene_personal col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="./img/accesorios.jpg" class="card-img-top" alt="Higiene Personal">
+          <div class="card-body">
+            <h5 class="card-title">Accesorios</h5>
+            <p class="card-text">El estilo personal se muestra con la ropa, pero la perfecciona con los accesorios</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+      </section> 
+      <section class="seccion_bebes col-md-4">
+        <div class="card card_bebes" style="width: 18rem;">
+          <img src="./img/bebés.jpg" class="card-img-top" alt="Bebés">
+          <div class="card-body">
+            <h5 class="card-title">Bebés</h5>
+            <p class="card-text">Porque tu bebé merece solo lo mejor</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
       </section>
-      <section class="seccion_higiene_personal">
-        <p class="cuidadopersonal_subtitulo">Higiene Personal</p>
-        <img
-          class="higiene_personal_imagen"
-          src="./img/HigienePersonal.jpg"
-          alt="Higiene Personal"
-        />
+      <section class="seccion_mamas col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="./img/mamás.jpg" class="card-img-top" alt="Higiene Personal">
+          <div class="card-body">
+            <h5 class="card-title">Mamás</h5>
+            <p class="card-text">Todo lo que necesitas, para acompañarte en este camino</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
       </section>
+      <section class="seccion_alimentos_saludables col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="./img/alimentos saludables.jpg" class="card-img-top" alt="Alimentos Saludables">
+          <div class="card-body">
+            <h5 class="card-title">Alimentos Saludables</h5>
+            <p class="card-text">La nutrición óptima, es la medicina del mañana</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+      </section>
+      <section class="seccion_higiene_bucal col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="./img/bucal.jpg" class="card-img-top" alt="Higiene Bucal">
+          <div class="card-body">
+            <h5 class="card-title">Higiene Bucal</h5>
+            <p class="card-text">Cuidá tu boca con profesionales</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+      </section>      
     </main>
       <!-- Inicio Footer -->
       <footer class="footer_principal">
@@ -104,12 +128,17 @@
         </div>
         <div class="footer_instagram">
           <img
-          class="fOOter_principal_imagen_instagram"
-          src="./img/LOGOMCCLYMONTINSTAG.png"
-          alt=""
+          class="fOOter_principal_imagen_redes "
+          src="./img//instagram_108043.png"
+          alt="logo redes sociales"
         />
+        <img
+        class="fOOter_principal_imagen_redes"
+        src="./img/facebook_108044.png"
+        alt="logo redes sociales"
+      />
         <p class="footer_principal_texto_instagram">Seguinos</p>
-        </div>
+        </div>        
       </footer>
       <!-- Fin Footer -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
