--- a/index.html
+++ b/index.html
@@ -5,51 +5,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="descripcion" content="farmacia de Rosario">
+    <meta name="keywords" content="paginas web, mobile frist, html5, css3, sass, responsive,ecommerce, apps a medida">
     <link rel="shortcut icon" href="./img/LOGOMCCLYMONT.svg" />
-    <link rel="stylesheet" href="./ccs/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <title>Farmacia Mc Clymont</title>
+    <title>Farmacia Mc Clymont, todo lo que necesitas, envíos sin cargo </title>
   </head>
   <body>
-    <header class="navegacion_principal_header container-fluid ">
-      <img
-        class="navegacion_principal_header_logo row"
-        src="./img/LOGOMCCLYMONT.png"
-        alt="LOGO MC CLYMONT"
-      />
-      <!-- Inicio Navegador -->
+    <header class="navegacion_principal_header container-fluid">  
       <nav class="navbar navbar-expand-lg" >
         <div class="container-fluid ">
+          <img
+        class="navegacion_principal_header_logo  "
+        src="./img/LOGOMCCLYMONT.png"
+        alt="LOGO MC CLYMONT"   
+      />        
+      </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active titulo_nav" aria-current="page" href="../index.html">INICIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link titulo_nav" href="./nosotros.html">NOSOTROS</a>
+                <a class="nav-link active titulo_nav" href="./nosotros.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link titulo_nav" href="./contactos.html">CONTACTO</a>
+                <a class="nav-link active titulo_nav" href="./contactos.html">CONTACTO</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle titulo_nav" href="./cuidadopersonal.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <li class="nav-item">
+                <a class="nav-link active titulo_nav" href="./cuidadopersonal.html">
                   CUIDADO PERSONAL
                 </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">CABELLO</a></li>
-                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">HIGIENE BUCAL</a></li>
-                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">HIGIENE PERSONAL</a></li>
-                </ul>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle titulo_nav " href="./medicamentos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  MEDICAMENTOS
-                </a>
-                <ul class="dropdown-menu menu_desplegable">
-                  <li><a class="dropdown-item sub_titulo_nav" href="./medicamentos.html">OBRA SOCIAL</a></li>
-                  <li><a class="dropdown-item sub_titulo_nav" href="./medicamentos.html">PARTICULAR</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link active titulo_nav " href="./medicamentos.html">MEDICAMENTOS</a>
               </li>
           </div>
         </div>
@@ -71,19 +64,21 @@
       <img
         class="main_header_principal_imagen"
         src="./img/Imagen1.jpg"
-        alt="FARMACIA"
+        alt="FARMACIA DE FONDO"
       />
     </main>
     <!-- Fin Main Header -->
     <!-- Inicio como trabajamos -->
-    <section class="como_trabajamos">
-      <div class="como_trabajamos_contenedor">
-      <h1 class="como_trabajamos_titulo">¿Cómo trabajamos?</h1>
-      <div class="pedido_contenedor">
+    <section class="como_trabajamos padding-1 container-fluid row">
+      <div class="como_trabajamos_contenedor col-sm-3 ">
+      <h1 class="como_trabajamos_titulo p-10 text-center">¿Cómo trabajamos?</h1>
+      </div>
+      <div class="row justify-content-between">
+      <div class="pedido_contenedor  col-md-3 ">
         <h2 class="pedido_titulo">Hacé tu Pedido Online</h2>
         <img
-          src="./img/Imagen04.jpg"
-          class="pedido_imagen"
+          src="./img/Imagen04-removebg-preview.png"
+          class="pedido_imagen col-md-8   "
           alt="Hacé tu pedido Online"
         />
         <p class="pedido_contenido">
@@ -91,11 +86,11 @@
           pedido será procesado y recibirás un mail de confirmación.
         </p>
       </div>      
-      <div class="delivery_contenedor">
+      <div class="delivery_contenedor col-md-3 ">
         <h2 class="delivery_titulo">Delivery a tu casa</h2>
         <img
-          src="./img/Imagen05.jpg"
-          class="delivery_imagen"
+          src="./img/Imagen05-removebg-preview.png"
+          class="delivery_imagen col-md-8 col-sm-4 text-center"
           alt="Delivery a tu casa"
         />
         <p class="delivery_contenido">
@@ -103,11 +98,11 @@
           necesitarás adjuntar imagen de la receta e indicar el medio de pago.
         </p>
       </div>
-      <div class="takeaway_contenedor">
+      <div class="takeaway_contenedor  col-md-3 ">
         <h2 class="takeaway_titulo">Take Away en la Farmacia</h2>
         <img
-          src="./img/Imagen03.jpg"
-          class="takeaway_imagen"
+          src="./img/Imagen03-removebg.png"
+          class="takeaway_imagen col-md-8 col-sm-4 text-center"
           alt="Take Away en la Farmacia"
         />
         <p class="takeaway_contenido">
@@ -116,51 +111,56 @@
         </p>
       </div>
       </div>
-      <div class="pedilo_ahora_contenedor">
-        <p class="pedilo_ahora">Pedilo Ahora</p>
+      <div class="row justify-content-end">
+      <div class="pedilo_ahora_contenedor col-md-3 ">
+        <p class="pedilo_ahora ">Pedilo Ahora</p>
+      </div>   
       </div>
-    </section>
-    <!-- Fin como trabajamos -->
-    <!-- Inicio Promociones -->
-    <section class="promociones_principal">
-      <h2 class="promociones_titulo">Promociones</h2>
-      <div class="promociones_imagenes">
+      <h2 class="promociones_titulo col-md-3  ">Promociones</h2>
+      <div class="promociones_imagenes row">
         <img
           src="./img/Promociones_02.jpg"
           alt="promociones"
-          class="promociones_imagen01"
+          class="promociones_imagen01 col-md-6"
         />
         <img
           src="./img/Promociones_01.jpg"
           alt="promocionescantidad"
-          class="promociones_imagen_2x1"
+          class="promociones_imagen_2x1 col-md-6"
         />        
+      </div>        
       </div>
     </section>
     <!-- Fin Promociones -->
     <!-- Inicio Footer -->
     <footer class="footer_principal">
-      <div class="footer_farmacia">
+        <div class="footer_farmacia">
+          <img
+          class="footer_principal_imagen_logo"
+          src="./img/LOGOMCCLYMONT.png"
+          alt="LOGO MC CLYMONT"
+        />
+        <p class="footer_principal_texto_contacto">
+          Salta 2398 Rosario Santa Fe Tel.0341-4392110
+        </p>
+        </div>
+        <div class="footer_instagram">
+          <img
+          class="fOOter_principal_imagen_redes "
+          src="./img//instagram_108043.png"
+          alt="logo redes sociales"
+        />
         <img
-        class="footer_principal_imagen_logo"
-        src="./img/LOGOMCCLYMONT.png"
-        alt="LOGO MC CLYMONT"
+        class="fOOter_principal_imagen_redes"
+        src="./img/facebook_108044.png"
+        alt="logo redes sociales"
       />
-      <p class="footer_principal_texto_contacto">
-        Salta 2398 Rosario Santa Fe Tel.0341-4392110
-      </p>
-      </div>
-      <div class="footer_instagram">
-        <img
-        class="fOOter_principal_imagen_instagram"
-        src="./img/LOGOMCCLYMONTINSTAG.png"
-        alt=""
-      />
-      <p class="footer_principal_texto_instagram">Seguinos</p>
-      </div>
-    </footer>
+        <p class="footer_principal_texto_instagram">Seguinos</p>
+        </div>        
+      </footer>
     <!-- Fin Footer -->
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   </body>
 </html>
