--- a/nosotros.html
+++ b/nosotros.html
@@ -5,49 +5,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./ccs/style.css" />
+    <meta name="descripcion" content="farmacia de Rosario con excelente trayectoria">
+    <meta name="keywords" content="paginas web, mobile frist, html5, css3, sass, responsive,ecommerce, apps a medida">
+    <link rel="stylesheet" href="./css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <title>Farmacia Mc Clymont</title>
+    <title>Farmacia Mc Clymont, especialistas en atención</title>
   </head>
   <body>
     <header class="navegacion_principal_header container-fluid">  
-      <img
-        class="navegacion_principal_header_logo row"
-        src="./img/LOGOMCCLYMONT.png"
-        alt="LOGO MC CLYMONT"
-      />
-      <!-- Inicio Navegador -->
-      <nav class="navbar navbar-expand-lg " >
+      <nav class="navbar navbar-expand-lg" >
         <div class="container-fluid ">
+          <img
+        class="navegacion_principal_header_logo  "
+        src="./img/LOGOMCCLYMONT.png"
+        alt="LOGO MC CLYMONT"   
+      />        
+      </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active titulo_nav" aria-current="page" href="../index.html">INICIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link titulo_nav" href="./nosotros.html">NOSOTROS</a>
+                <a class="nav-link active titulo_nav" href="./nosotros.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link titulo_nav" href="./contactos.html">CONTACTO</a>
+                <a class="nav-link active titulo_nav" href="./contactos.html">CONTACTO</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle titulo_nav" href="./cuidadopersonal.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <li class="nav-item">
+                <a class="nav-link active titulo_nav" href="./cuidadopersonal.html">
                   CUIDADO PERSONAL
                 </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">CABELLO</a></li>
-                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">HIGIENE BUCAL</a></li>
-                  <li><a class="dropdown-item sub_titulo_nav" href="./cuidadopersonal.html">HIGIENE PERSONAL</a></li>
-                </ul>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle titulo_nav " href="./medicamentos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  MEDICAMENTOS
-                </a>
-                <ul class="dropdown-menu menu_desplegable">
-                  <li><a class="dropdown-item sub_titulo_nav" href="./medicamentos.html">OBRA SOCIAL</a></li>
-                  <li><a class="dropdown-item sub_titulo_nav" href="./medicamentos.html">PARTICULAR</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link active titulo_nav " href="./medicamentos.html">MEDICAMENTOS</a>
               </li>
           </div>
         </div>
@@ -63,10 +57,10 @@
       </div>
     </header>
     <!-- Fin Navegador -->
-    <main>
-      <div class="nosotros">
-        <h1 class="nosotros_titulo">Sobre nosotros</h1>
-        <p class="nosotros_contenido">
+    <main class=" nosotros container-fluid">
+      <div class="row justify-content-center">
+        <h1 class="nosotros_titulo col-md-5 ">Sobre nosotros</h1>
+        <p class="nosotros_contenido_p col-md-8">
           Farmacia MC CLYMONT, ubicada en la zona de pichincha, Salta esquina
           Santiago (Rosario), con una trayectoria de más de 50 años en el rubro,
           es reconocida por la excelencia de servicio, la responsabilidad y la
@@ -81,12 +75,13 @@
           dermocosméticos con grandes promociones, lo cual la hizo crecer a lo
           largo del tiempo siendo una de las farmacias que más se especializó en
           esa área en la ciudad.
-        </p>
+        </p>          
       </div>
     </main>
         <!-- Inicio Footer -->
-        <footer class="footer_principal_nosotros">
-          <img
+        <footer class="footer_principal">
+          <div class="footer_farmacia">
+            <img
             class="footer_principal_imagen_logo"
             src="./img/LOGOMCCLYMONT.png"
             alt="LOGO MC CLYMONT"
@@ -94,12 +89,20 @@
           <p class="footer_principal_texto_contacto">
             Salta 2398 Rosario Santa Fe Tel.0341-4392110
           </p>
-          <img
-            class="fOOter_principal_imagen_instagram"
-            src="./img/LOGOMCCLYMONTINSTAG.png"
-            alt=""
+          </div>
+          <div class="footer_instagram">
+            <img
+            class="fOOter_principal_imagen_redes "
+            src="./img//instagram_108043.png"
+            alt="logo redes sociales"
           />
+          <img
+          class="fOOter_principal_imagen_redes"
+          src="./img/facebook_108044.png"
+          alt="logo redes sociales"
+        />
           <p class="footer_principal_texto_instagram">Seguinos</p>
+          </div>        
         </footer>
         <!-- Fin Footer -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
