--- a/cuidadopersonal.html
+++ b/cuidadopersonal.html
@@ -47,8 +47,8 @@
           </div>
         </div>
       </nav>
-      <div class="whatsapp">
-        <img
+      <div >
+        <img class="whatsapp"
           src="./img/WhatsApp.svg.webp"
           alt="Whatsapp"
           width="100"
@@ -60,7 +60,7 @@
     <main class="cuidadopersonal_principal container-fluid">
       <div class="row">
       <section class="seccion_cabello col-md-4">
-        <div class="card card_cabello" style="width: 18rem;">
+        <div class="card card_cabello" style="width: 13rem;">
           <img src="./img/cabello.jpg" class="card-img-top" alt="Cabello">
           <div class="card-body">
             <h5 class="card-title">Cabello</h5>
@@ -69,7 +69,7 @@
           </div>
       </section>
       <section class="seccion_higiene_personal col-md-4">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 13rem;">
           <img src="./img/accesorios.jpg" class="card-img-top" alt="Higiene Personal">
           <div class="card-body">
             <h5 class="card-title">Accesorios</h5>
@@ -78,7 +78,7 @@
           </div>
       </section> 
       <section class="seccion_bebes col-md-4">
-        <div class="card card_bebes" style="width: 18rem;">
+        <div class="card card_bebes" style="width: 13rem;">
           <img src="./img/bebés.jpg" class="card-img-top" alt="Bebés">
           <div class="card-body">
             <h5 class="card-title">Bebés</h5>
@@ -87,7 +87,7 @@
           </div>
       </section>
       <section class="seccion_mamas col-md-4">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 13rem;">
           <img src="./img/mamás.jpg" class="card-img-top" alt="Higiene Personal">
           <div class="card-body">
             <h5 class="card-title">Mamás</h5>
@@ -96,7 +96,7 @@
           </div>
       </section>
       <section class="seccion_alimentos_saludables col-md-4">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 13rem;">
           <img src="./img/alimentos saludables.jpg" class="card-img-top" alt="Alimentos Saludables">
           <div class="card-body">
             <h5 class="card-title">Alimentos Saludables</h5>
@@ -105,7 +105,7 @@
           </div>
       </section>
       <section class="seccion_higiene_bucal col-md-4">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 13rem;">
           <img src="./img/bucal.jpg" class="card-img-top" alt="Higiene Bucal">
           <div class="card-body">
             <h5 class="card-title">Higiene Bucal</h5>
