--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           </div>
         </div>
       </nav>
-      <div class="whatsapp">
-        <img
+      <div >
+        <img class="whatsapp"
           src="./img/WhatsApp.svg.webp"
           alt="Whatsapp"
           width="100"
@@ -62,23 +62,23 @@
     <main class="main_header_principal">
       <div class="main_header_contenedor">
       <img
-        class="main_header_principal_imagen"
+        class="main_header_principal_imagen img-fluid"
         src="./img/Imagen1.jpg"
         alt="FARMACIA DE FONDO"
       />
     </main>
     <!-- Fin Main Header -->
     <!-- Inicio como trabajamos -->
-    <section class="como_trabajamos padding-1 container-fluid row">
-      <div class="como_trabajamos_contenedor col-sm-3 ">
-      <h1 class="como_trabajamos_titulo p-10 text-center">¿Cómo trabajamos?</h1>
+    <section class="como_trabajamos container-fluid">
+      <div class="como_trabajamos_contenedor col-md-3 ">
+      <h1 class="como_trabajamos_titulo  text-center">¿Cómo trabajamos?</h1>
       </div>
       <div class="row justify-content-between">
-      <div class="pedido_contenedor  col-md-3 ">
+      <div class="pedido_contenedor  col-md-3">
         <h2 class="pedido_titulo">Hacé tu Pedido Online</h2>
         <img
           src="./img/Imagen04-removebg-preview.png"
-          class="pedido_imagen col-md-8   "
+          class="pedido_imagen col-md-8 img-fluid  "
           alt="Hacé tu pedido Online"
         />
         <p class="pedido_contenido">
@@ -86,11 +86,11 @@
           pedido será procesado y recibirás un mail de confirmación.
         </p>
       </div>      
-      <div class="delivery_contenedor col-md-3 ">
+      <div class="delivery_contenedor col-md-3">
         <h2 class="delivery_titulo">Delivery a tu casa</h2>
         <img
           src="./img/Imagen05-removebg-preview.png"
-          class="delivery_imagen col-md-8 col-sm-4 text-center"
+          class="delivery_imagen col-md-8 img-fluid"
           alt="Delivery a tu casa"
         />
         <p class="delivery_contenido">
@@ -98,11 +98,11 @@
           necesitarás adjuntar imagen de la receta e indicar el medio de pago.
         </p>
       </div>
-      <div class="takeaway_contenedor  col-md-3 ">
+      <div class="takeaway_contenedor  col-md-3">
         <h2 class="takeaway_titulo">Take Away en la Farmacia</h2>
         <img
           src="./img/Imagen03-removebg.png"
-          class="takeaway_imagen col-md-8 col-sm-4 text-center"
+          class="takeaway_imagen col-md-8 img-fluid"
           alt="Take Away en la Farmacia"
         />
         <p class="takeaway_contenido">
