--- a/nosotros.html
+++ b/nosotros.html
@@ -46,8 +46,8 @@
           </div>
         </div>
       </nav>
-      <div class="whatsapp">
-        <img
+      <div >
+        <img class="whatsapp"
           src="./img/WhatsApp.svg.webp"
           alt="Whatsapp"
           width="100"
